versioned_docs/version-5.4/server/troubleshooting/collect-info.mdx
---
title: "Collecting Information on Incidents for Support"
hide_table_of_contents: true
sidebar_label: Collect Info for Support
sidebar_position: 3
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Collecting Information on Incidents for Support

<Admonition type="note" title="Note">

* When encountering incidents or issues with RavenDB, it is essential to gather as much information as possible 
  to help the support team diagnose and resolve the problem effectively.

* Follow the steps in this article for collecting the relevant information for RavenDB support.

* In this page:

  * [Provide incident description](../../server/troubleshooting/collect-info.mdx#provide-incident-description)
  * [Create debug package](../../server/troubleshooting/collect-info.mdx#create-debug-package)
  * [Enable logs for ongoing issues](../../server/troubleshooting/collect-info.mdx#enable-logs-for-ongoing-issues)
  * [Download logs](../../server/troubleshooting/collect-info.mdx#download-logs)
  * [Reproduce scenario](../../server/troubleshooting/collect-info.mdx#reproduce-scenario)
  * [Create failing test](../../server/troubleshooting/collect-info.mdx#create-failing-test)

</Admonition>

## Provide incident description

* __Description__:  
  * Provide a detailed description of the incident you are experiencing.  
  * Include any error messages, warnings, or unexpected behavior you have encountered.

* __Exceptions__:  
  * If applicable, attach the __full-stack exception__ including the error message as plain text.
  * Specify the origin of the exception  
    (e.g. from RavenDB Studio, from the client, from server logs, etc.).

* __Versions__:  
  * Specify the RavenDB Server, Studio, and the client __versions__ that you are using.  



## Create debug package

![Create Debug Package](./assets/create-debug-package.png)

<Admonition type="note" title="Note">

1. Navigate to __Manage Server &gt; Gather Debug Info__

2. Select the data source(s) to retrieve. It is recommended to check all options.

3. Select all databases or choose specific databases to gather information from.

4. Select whether to create the package for the entire cluster or the current server.

5. Click 'Download'.  
   A zip file containing the debug package will be downloaded.

</Admonition>

<Admonition type="info" title="Info">

__If the Studio is unavailable__:

* Try to download the debug package by issuing an HTTP GET request to the following endpoint:  
  `{SERVER_URL}/admin/debug/info-package`.

* Execute this request for each node in the cluster, replacing `{SERVER_URL}` with the relevant node's URL.

</Admonition>

<Admonition type="note" title="Note">

__Before sending the debug package zip file__, perform the following checks:  

  * Verify that the zip file can be successfully extracted.
  * Verify that the content is similar to the following sample images.

![Zip file contents 1](./assets/zip-1.png)
![Zip file contents 2](./assets/zip-2.png)
![Zip file contents 3](./assets/zip-3.png)
![Zip file contents 4](./assets/zip-4.png)

</Admonition>



## Enable logs for ongoing issues

If the issue you encounter is still __ongoing__,  
then enable the following logs (if not enabled yet) before downloading existing log files:  

![Enable logs](./assets/enable-logs.png)

1. Navigate to __Manage Server &gt; Admin Logs__ and click 'Settings'.

2. __Server logs - Log Mode__:  
   * Set the RavenDB server logs level to 'Information'.  

3. __Traffic Watch log__:  
   * Click 'Configure' to enable Traffic Watch logging to the server logs.  
   * Keep the default values shown in the popup dialog.  

4. __Microsoft logs__:  
   * This is an advanced option, set it only if requested by the support team.
   * Click 'Configure' to enable the logging of Microsoft logs to the server logs.
   * Use the following suggested log configuration: 

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
   "Microsoft.AspNetCore":"Debug"
   // Available levels: Trace, Debug, Information, Warning, Error, Critical, None 
\}
`}
</CodeBlock>
</TabItem>

<Admonition type="warning" title="Warning">

* Be aware that all logs settings will reset to their default values after a server restart.  

* To maintain a specific setting after a server restart, set the following configuration keys  
  in your [default configuration](../../server/configuration/configuration-options.mdx):
  * Server logs - set [Logs.Mode](../../server/configuration/logs-configuration.mdx#logsmode)
  * Microsoft logs - set [Logs.Microsoft.Disable](../../server/configuration/logs-configuration.mdx#logsmicrosoftdisable)
  * Traffic Watch log - set [TrafficWatch.Mode](../../server/configuration/traffic-watch-configuration.mdx#trafficwatchmode)

</Admonition>



## Download logs

Perform the following for each node in your cluster:

![download logs](./assets/download-logs.png)

<Admonition type="note" title="Note">

1. Navigate to __Manage Server &gt; Admin Logs__ and click 'Download Logs'.

2. Either check 'Use minimum' to retrieve logs information from the time the server was started,  
   or enter a specific (local) time.

3. Either check 'Use maximum' to retrieve logs information up to the current time,  
   or enter a specific (local) time.

4. Click 'Download'.  
   A zip file containing the logs will be downloaded.

</Admonition>

<Admonition type="info" title="Info">

__If the Studio is unavailable__, or if the logs downloaded via the Studio appear problematic,  
then copy the log files directly from the disk to another location to ensure that you keep them,  
avoiding potential loss due to the retention configuration.

* The location of the log files is determined by the [Logs.Path](../../server/configuration/logs-configuration.mdx#logspath) configuration.

* Logs deletion time is controlled by the following configurations:
  * [Retention time in hours](../../server/configuration/logs-configuration.mdx#logsretentiontimeinhrs)
  * [Retention time in megabytes](../../server/configuration/logs-configuration.mdx#logsretentionsizeinmb)

</Admonition> 

<Admonition type="note" title="Note">

__Before sending the log files__, perform the following checks:

* Verify that the zip files can be successfully extracted.  
* Confirm that the logs correspond to the time of the incident.  
* Verify that the content is similar to the following sample images.

![Zip file contents 5](./assets/zip-5.png)
![Zip file contents 6](./assets/zip-6.png)

</Admonition>



## Reproduce scenario

* If the incident is over and you can reproduce it, then first verify logging level is set to 'Information'.  

* See how to enable the logs in [Enable logs](../../server/troubleshooting/collect-info.mdx#enable-logs-for-ongoing-issues).



## Create failing test

* If possible, it is advised to create a unit test that showcases the failure in your client code.

* Refer to [Writing your unit test](../../start/test-driver.mdx) to learn how to use __RavenDB's TestDriver__.



